--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automated University Timetable</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="https://rawgit.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="static/script.js" defer></script>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -75,17 +76,30 @@
         <input type="time" id="startTime" placeholder="Start Time" value="08:30" />
         <input type="time" id="endTime" placeholder="End Time" value="17:15" />
         <button id="generateTimetable">Generate Timetable</button>
-        <button id="saveTimetable">Save Timetable</button>
+        <button id="saveTimetable">Download Timetable</button>
+        <button id="saveToDatabase">Save to Database</button>
+        <button id="resetTimetable">Reset Timetable</button>
     </div>
 
-    <div id="coursesList">
+    
+    <div id="coursesList" class="drawer" style="left: -250px;">
         <div id="coursesHeading">Courses List</div>
-        <!-- Courses will be added here via JavaScript -->
     </div>
+    <div id="toggleButton" onclick="toggleDrawer()" class="toggleButton">&#10095;</div>
 
     <div id="timetableContainer">
         <!-- Timetable will be generated here -->
     </div>
+
+    <!-- Popup for Course Details -->
+    <div id="coursePopup" class="course-popup" style="display: none;">
+        <div class="course-details">
+            <!-- Content will be dynamically filled -->
+        </div>
+    </div>
+
+
+    
 </body>
 
 </html>
